fixed alignment of courses box

--- a/src/pages/Courses.module.css
+++ b/src/pages/Courses.module.css
@@ -33,6 +33,7 @@
   margin-bottom: 3.2rem;
   text-align: end;
   line-height: 1.5;
+  height: 15rem;
 }
 
 .courseContent button {
